feat: :sparkles: add put route
