# api/src/routes/fileRoute.js
@@ -8,6 +8,7 @@ const router = Router();
 router
 	.get('/files', FileController.getAllFiles)
 	.get('/files/:id', FileController.getFile)
-	.post('/files', MulterFacade.getImageUploadMiddleware().single('file'), multerErrorHandlerMiddleware(), FileController.createFile);
+	.post('/files', MulterFacade.getImageUploadMiddleware().single('file'), multerErrorHandlerMiddleware(), FileController.createFile)
+	.put('/files/:id', MulterFacade.getImageUploadMiddleware().single('file'), multerErrorHandlerMiddleware(), FileController.updateFile);
 
 module.exports = router;
